<resources>
    <string name="app_name">Mobile_Assignment6</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="edu">Education</string>
    <string name="hobby">Hobby</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="searchField">Input first name, last name or phone number to search</string>
</resources>
